--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ https://templatemo.com/tm-580-woox-travel
         <div id="top-banner-2" class="banner">
           <div class="banner-inner-wrapper header-text">
             <div class="main-caption">
-              <h2>Take a Glimpse Into The Beautiful Country Of:</h2>
+              <h2>Take a Glimpse Into The Beautiful Country Of:V1</h2>
               <h1>Switzerland</h1>
               <div class="border-button"><a href="about.html">Go There</a></div>
             </div>
